--- a/mortgageAPI.yaml
+++ b/mortgageAPI.yaml
@@ -292,17 +292,7 @@ paths:
         - $ref: '#/components/parameters/agent_in_header'
       responses:
         '201':
-          description: created
-          headers:
-            location:
-              schema:
-                type: string
-                format: uri
-                description: In the location header of the response you will find the URI of the newly created resource. With a GET call to this address you can retrieve a representation of the new product.
-            X-Correlation-ID:
-              schema:
-                type: string
-              description: Reflects the ID (set by the caller) from the request.
+          $ref: '#/components/responses/standard201'
         '400':
           $ref: '#/components/responses/standard400'
         '401':
@@ -543,17 +533,7 @@ paths:
               type: string
       responses:
         '201':
-          description: created
-          headers:
-            location:
-              schema:
-                type: string
-                format: uri
-                description: In the location header of the response you will find the URI of the newly created resource. With a GET call to this address you can retrieve a representation of the new product.
-            X-Correlation-ID:
-              schema:
-                type: string
-              description: Reflects the ID (set by the caller) from the request.
+          $ref: '#/components/responses/standard201'
         '400':
           $ref: '#/components/responses/standard400'
         '401':
@@ -731,23 +711,7 @@ paths:
                   example: 576f8de3-6b30-4882-a7af-da2132a456cf
       responses:
         '201':
-          description: created
-          headers:
-            documentId:
-              schema:
-                type: string
-                format: uuid
-                description: Uuid v4 of the created document defined by FI
-                example: 232af5ca-fca3-4bd4-b91d-23d755d9af0f
-            location:
-              schema:
-                type: string
-                format: uri
-                description: In the location header of the response you will find the URI of the newly created resource. With a GET call to this address you can retrieve a representation of the new product.
-            X-Correlation-ID:
-              schema:
-                type: string
-              description: Reflects the ID (set by the caller) from the request.
+          $ref: '#/components/responses/standard201'
         '400':
           $ref: '#/components/responses/standard400'
         '401':
@@ -970,17 +934,7 @@ paths:
               $ref: '#/components/schemas/FinancingRequest'
       responses:
         '201':
-          description: created
-          headers:
-            location:
-              schema:
-                type: string
-                format: uri
-                description: In the location header of the response you will find the URI of the newly created resource. With a GET call to this address you can retrieve a representation of the new product.
-            X-Correlation-ID:
-              schema:
-                type: string
-              description: Reflects the ID (set by the caller) from the request.
+          $ref: '#/components/responses/standard201'
         '400':
           $ref: '#/components/responses/standard400'
         '401':
@@ -1275,17 +1229,7 @@ paths:
         - $ref: '#/components/parameters/agent_in_header'
       responses:
         '201':
-          description: created
-          headers:
-            location:
-              schema:
-                type: string
-                format: uri
-                description: In the location header of the response you will find the URI of the newly created resource. With a GET call to this address you can retrieve a representation of the new product.
-            X-Correlation-ID:
-              schema:
-                type: string
-              description: Reflects the ID (set by the caller) from the request.
+          $ref: '#/components/responses/standard201'
         '400':
           $ref: '#/components/responses/standard400'
         '401':
@@ -1642,6 +1586,18 @@ components:
       pattern: '[A-Z]{2}'
       example: CH
       description: 2-Letter ISO 3166-2 Country Code
+    # ------------
+    # ---- Resource created response ----
+    commonResourceCreatedResponse:
+      title: Recource created response
+      description: Uuid v4 of the created resource
+      example: '20460121-6aff-485b-a61d-6056ecd72bd8'
+      type: object
+      required:
+        - id
+      properties:
+        id:
+          $ref: '#/components/schemas/CommonID'
     # ------------
     # ---- Error Response (compliant to SIX b.Link)
     commonErrorResponse:
@@ -2731,6 +2687,22 @@ components:
         example: cursorIDxyz
   # ---- Responses - Standard Errors Common Data Model v1.2.2----
   responses:
+    standard201:
+      description: created
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/commonResourceCreatedResponse'
+      headers:
+        location:
+          schema:
+            type: string
+            format: uri
+            description: In the location header of the response you will find the URI of the newly created resource. With a GET call to this address you can retrieve a representation of the new product.
+        X-Correlation-ID:
+          schema:
+            type: string
+          description: Reflects the ID (set by the caller) from the request.
     standard400:
       headers:
         Content-Type:
