issue-26-children-in-the-same-household
Valiant offers the family fixed mortgage product based on some known conditions. Pass the information about childs to determine if the family fixed mortgage could be offered for the given application.

--- a/mortgageAPI.yaml
+++ b/mortgageAPI.yaml
@@ -2554,6 +2554,7 @@ components:
           enum:
             - individual
             - legal_entity
+            - child
         applicantDetail:
           type: object
           properties:
