Issue 27 financing request optional assets
added the back again the self_employment. Will be removed with Rls3.x

--- a/mortgageAPI.yaml
+++ b/mortgageAPI.yaml
@@ -2740,6 +2740,7 @@ components:
       enum:
         - employment_gross
         - employment_net
+        - self_employment
         - self_employment_year-1
         - self_employment_year-2
         - self_employment_year-3
